# ethz_polyhack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  trajectories_xy_heart.txt
gazebo/: basic_house.world
include/: BaseDrone.h  Common.h  CommonStruct.h  DogDrone.h
include/beehaving_drones/: BaseDrone.h  Common.h  CommonStruct.h  Console.h  DogDrone.h
include/trajectories/: generate_trajectories.h  generate_trajectories_with_goals.h  read_trajectories.h
src/: BaseDrone.cpp  Common.cpp  CommonStruct.cpp  follow_mission.cpp  follow_mission_from_file.cpp  takeoff_and_land.cpp  test_behavior.cpp
src/beehaving_drones/: BaseDrone.cpp  Common.cpp  CommonStruct.cpp  Console.cpp  DogDrone.cc
src/trajectories/: generate_trajectories.cc  generate_trajectories.cpp  generate_trajectories_with_goals.cpp  read_trajectories.cc
